# ConforMind

./: .gitignore  .ruff.toml  Pipfile  conformind_ai.db-shm  conformind_ai.db-wal  main.py  pyproject.toml
anthropic_folder/: Service_hybride.MD  devellopement_phased.MD  guide_complet.MD  program_P1.MD  structure_projet.MD
backend/: .gitignore
backend/app/api_schemas/: ai_models.py  compliance.py  health.py  reports.py  sputil.py
backend/app/core/: config.py  database.py  nace_database.py
backend/app/database_tables/: __init__.py  enum_compliances.py  enums.py  models.py  user.py
backend/app/database_tables/client_profile/: stakeholder_info.py  tech_stack_info.py
backend/app/database_tables/client_profile/basic_info/: basic_info.py  enums.py
backend/app/database_tables/client_profile/certification_info/: enums.py  utils.py  (+2 more)
backend/app/routers/: ai_models.py  compliance.py  file_storage.py  health.py  reports.py  router_models.MD
backend/app/utilities/: auth_temp.py  file_utils.py
docs/: BiasDetectionGuide.MD  EvaluationGratuiteEUAIAct.MD
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/landing/: CTASection.jsx  Features.jsx  HeroSection.jsx
frontend/src/components/layout/: AppLayout.jsx  Footer.jsx  Header.jsx
frontend/src/components/visuals/: HeroIllustration.jsx
frontend/src/pages/AIModels/: AIModels.jsx
frontend/src/pages/Compliance/: Compliance.jsx
frontend/src/pages/LandingPage/: LandingPage.jsx
frontend/src/pages/Reports/: Reports.jsx
frontend/src/pages/Settings/: Settings.jsx
(+11 files in other folders)
